k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tom-skeleton-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - tom-skeleton.tom-kpaas.com
    secretName: tom-skeleton-tls
  rules:
  - host: tom-skeleton.tom-kpaas.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tom-skeleton-service
            port:
              number: 80
